# neuro-posts

./: .gitignore  README.md  pyproject.toml
prompts/: generate_post.txt  generate_topic.txt
src/: config.py  main.py  services.py
